--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -6,4 +6,12 @@ spring.jpa.hibernate.ddl-auto=update
 
 kakao.key = d0ac00c3ae0050b7c50e4f5b8e222e7f
 
+logging.level.root=INFO
+logging.level.com.mydiary=DEBUG
+logging.file.name=app.log
+logging.file.path=/var/log/myDiary
+logging.logback.rollingpolicy.max-history=1
+
+
+
 
