--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.1.3'
 	id 'io.spring.dependency-management' version '1.1.3'
+	id("org.springdoc.openapi-gradle-plugin") version "1.7.0"
+
 }
 
 group = 'com.mydiary'
@@ -40,13 +42,7 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 0
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-
-
-	//https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui
-	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
-	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
-//
-//	implementation 'javax.servlet:javax.servlet-api:4.0.1' // Servlet API 버전을 사용하는 버전으로 변경
+	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
 
 	implementation 'mysql:mysql-connector-java:8.0.26'
 
