--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -4,6 +4,16 @@ spring.datasource.password=4564
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.username=sa
+#spring.h2.console.enabled=true
+#spring.h2.console.path=h20-console
+
+
 kakao.key = d0ac00c3ae0050b7c50e4f5b8e222e7f
 
 logging.level.root=INFO
@@ -12,6 +22,11 @@ logging.file.name=app.log
 logging.file.path=/var/log/myDiary
 logging.logback.rollingpolicy.max-history=1
 
+# Springdoc OpenAPI UI ???
+springdoc.api-docs.enabled=true
 
+# Swagger UI ???
+springdoc.swagger-ui.enabled=true
 
-
+jwt.issuer: apddl5@naver.com
+jwt.secret_key: study-springboot
