--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -4,6 +4,8 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 	id("org.springdoc.openapi-gradle-plugin") version "1.7.0"
 
+
+
 }
 
 group = 'com.mydiary'
@@ -28,11 +30,13 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter'
+
 	implementation 'org.springframework.security:spring-security-config:6.1.2'
-	implementation 'org.springframework.security:spring-security-config:6.1.2'
-	implementation 'org.springframework.security:spring-security-config:6.1.2'
+
 	implementation 'org.springframework.security:spring-security-web:6.1.2'
-	implementation 'org.springframework.security:spring-security-web:6.1.2'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
+
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
 
 	compileOnly 'org.projectlombok:lombok'
@@ -40,11 +44,15 @@ dependencies {
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testAnnotationProcessor 'org.projectlombok:lombok'
+	testImplementation 'org.projectlombok:lombok'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 0
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-	implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
-	implementation 'mysql:mysql-connector-java:8.0.26'
+	implementation 'mysql:mysql-connector-java:8.0.28'
 
 
 
