--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.password=4564
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
+spring.security.oauth2.client.registration.google.client-id=null
+spring.security.oauth2.client.registration.google.client-secret=null
+spring.security.oauth2.client.registration.google.scope=email, profile
 
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
