--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -31,5 +31,5 @@ springdoc.api-docs.enabled=true
 # Swagger UI ???
 springdoc.swagger-ui.enabled=true
 
-jwt.issuer: apddl5@naver.com
-jwt.secret_key: study-springboot
+jwt.issuer=apddl5@naver.com
+jwt.secret_key=study-springboot
