--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -29,7 +29,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.sprps ingframework.boot:spring-boot-starter'
+
+	implementation 'com.google.code.gson:gson:2.9.0'
+
+	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
 	implementation 'org.springframework.security:spring-security-config:6.1.2'
 
