--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -29,11 +29,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.sprps ingframework.boot:spring-boot-starter'
+	implementation 'org.springframework.boot:spring-boot-starter'
 
 	implementation 'com.google.code.gson:gson:2.9.0'
-
-	implementation 'com.google.code.findbugs:jsr305:3.0.2'
 
 	implementation 'org.springframework.security:spring-security-config:6.1.2'
 
@@ -51,6 +49,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.projectlombok:lombok'
+
 	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 0
