--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.security.oauth2.client.registration.google.scope=email, profile
 
 kakao.key = d0ac00c3ae0050b7c50e4f5b8e222e7f
 
+spring.main.banner-mode=off
 logging.level.root=INFO
 logging.level.com.mydiary=DEBUG
 logging.file.name=app.log
