--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -12,7 +12,9 @@ group = 'com.mydiary'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	//sourceCompatibility = '17'
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 configurations {
