--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -23,21 +23,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-        with:
-          path: ./my_diary_server
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: "17"
           distribution: "temurin"
-          path: ./my_diary_server
 
-      - name: Validate Gradle wrapper
-        run: ./my_diary_server/gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
-
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./my_diary_server/gradlew
-
-      - name: Build with Gradle
-        run: ./my_diary_server/gradlew build -x test
+      - name: Grant Execute Permission For Gradlew & Build gradle
+        run: |
+          cd ./my_diary_server
+          chmod +x gradlew
+          ./gradlew build
