--- a/my_diary_server/Dockerfile
+++ b/my_diary_server/Dockerfile
@@ -1,4 +1,10 @@
-FROM openjdk:17-jre-slim
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+# Use the official OpenJDK base image
+FROM openjdk:17-jdk-hotspot
+
+# Set the working directory inside the container
+WORKDIR /app
+
+# Copy your application files to the container
+COPY . /app
+
+# Your additional Dockerfile configuration goes here
