--- a/my_diary_server/Dockerfile
+++ b/my_diary_server/Dockerfile
@@ -1,10 +1,11 @@
 # Use the official OpenJDK base image
-FROM openjdk:17-jdk-hotspot
+FROM openjdk:17-jdk
 
 # Set the working directory inside the container
 WORKDIR /app
 
 # Copy your application files to the container
-COPY . /app
+COPY build/libs/*.jar app.jar
 
 # Your additional Dockerfile configuration goes here
+ENTRYPOINT ["java","-jar","/app.jar"]
