--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -19,12 +19,12 @@ spring.security.oauth2.client.registration.google.scope=email, profile
 
 kakao.key = d0ac00c3ae0050b7c50e4f5b8e222e7f
 
-spring.main.banner-mode=off
-logging.level.root=INFO
-logging.level.com.mydiary=DEBUG
-logging.file.name=app.log
-logging.file.path=/var/log/myDiary
-logging.logback.rollingpolicy.max-history=1
+#spring.main.banner-mode=off
+#logging.level.root=INFO
+#logging.level.com.mydiary=DEBUG
+#logging.file.name=app.log
+#logging.file.path=/var/log/myDiary
+#logging.logback.rollingpolicy.max-history=1
 
 # Springdoc OpenAPI UI ???
 springdoc.api-docs.enabled=true
