--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -17,27 +17,49 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  spring-build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          path: ./my_diary_server
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: "17"
           distribution: "temurin"
-          path: ./my_diary_server
 
-      - name: Validate Gradle wrapper
-        run: ./my_diary_server/gradle/wrapper-validation-action@ccb4328a959376b642e027874838f60f8e596de3
+      - name: Grant Execute Permission For Gradlew & Build gradle
+        run: |
+          cd ./my_diary_server
+          chmod +x gradlew
+          ./gradlew build -x test
+      - name: Docker hub login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_ID }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Run chmod to make gradlew executable
-        run: chmod +x ./my_diary_server/gradlew
+      - name: Docker image build
+        run: |
+          cd ./my_diary_server
+          docker build -t ${{secrets.DOCKERHUB_ID}}/test-server .
 
-      - name: Build with Gradle
-        run: ./my_diary_server/gradlew build -x test
+      - name: Docker Hub push
+        run: docker push ${{secrets.DOCKERHUB_ID}}/test-server
+
+      - name: Deploy to Instance
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.GCP_HOST }}
+          username: ${{ secrets.GCP_USERNAME }}
+          key: ${{ secrets.GCP_PRIVATEKEY }}
+          script: |
+            sudo docker login -u ${{ secrets.DOCKERHUB_ID }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+            sudo docker pull ${{ secrets.DOCKERHUB_ID }}/test-server
+            sudo docker rm -f ${docker ps -qa} 2>/dev/null || true
+            cd emoD_project/server
+            sudo docker-compose up -d
+            sudo docker image prune -f
