--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -60,6 +60,6 @@ jobs:
             sudo docker login -u ${{ secrets.DOCKERHUB_ID }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             sudo docker pull ${{ secrets.DOCKERHUB_ID }}/test-server
             sudo docker rm -f ${docker ps -qa} 2>/dev/null || true
-            cd emoD_project/server
+            cd ./emoD_project/server
             sudo docker-compose up -d
             sudo docker image prune -f     
