--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,20 @@ jobs:
           chmod +x gradlew
           ./gradlew build -x test
 
+      - name: Run Docker Container
+        run: |
+          docker run -d --name test-container wintery7/test-server
+        id: docker-container
+        continue-on-error: true
+
+    - name: Check JAR in /app directory
+        run: |
+          echo "Waiting for the container to start..."
+          sleep 10  # 대기 시간을 조절할 수 있습니다.
+          docker exec ${{ steps.docker-container.outputs.id }} ls /app
+          docker stop ${{ steps.docker-container.outputs.id }}
+          docker rm ${{ steps.docker-container.outputs.id }}
+
       - name: Docker hub login
         uses: docker/login-action@v3
         with:
@@ -62,5 +76,5 @@ jobs:
             sudo docker pull ${{ secrets.DOCKERHUB_ID }}/test-server
             sudo docker rm -f $(docker ps -qa) 2>/dev/null || true
             cd /home/koreaj83/emoD_project/server
-            docker run -d --name test-container wintery7/test-server
+            sudo docker-compose up -d
             sudo docker image prune -f     
