--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -4,8 +4,6 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 	id("org.springdoc.openapi-gradle-plugin") version "1.7.0"
 
-
-
 }
 
 group = 'com.mydiary'
@@ -59,6 +57,14 @@ dependencies {
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
 	implementation 'mysql:mysql-connector-java:8.0.28'
+
+	//FCM 기능을 위한 의존성 추가
+	implementation 'com.google.firebase:firebase-admin:9.2.0'
+
+
+
+
+
 
 
 
