--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -34,3 +34,7 @@ springdoc.swagger-ui.enabled=true
 
 jwt.issuer=apddl5@naver.com
 jwt.secret_key=study-springboot
+
+spring.cloud.gcp.storage.credentials.location=classpath:steel-autonomy-399708-6a68d08e50b5.json
+spring.cloud.gcp.storage.project-id=steel-autonomy-399708
+spring.cloud.gcp.storage.bucket:emod_project
