--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -61,6 +61,10 @@ dependencies {
 	//FCM 기능을 위한 의존성 추가
 	implementation 'com.google.firebase:firebase-admin:9.2.0'
 
+	// google storage 사용을 위한 의존성 추가
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-starter', version: '1.2.5.RELEASE'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-gcp-storage', version: '1.2.5.RELEASE'
+
 
 
 
