--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -38,3 +38,5 @@ jwt.secret_key=study-springboot
 spring.cloud.gcp.storage.credentials.location=classpath:steel-autonomy-399708-6a68d08e50b5.json
 spring.cloud.gcp.storage.project-id=steel-autonomy-399708
 spring.cloud.gcp.storage.bucket:emod_project
+
+spring.servlet.multipart.enabled=true
