--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -40,3 +40,6 @@ spring.cloud.gcp.storage.project-id=steel-autonomy-399708
 spring.cloud.gcp.storage.bucket:emod_project
 
 spring.servlet.multipart.enabled=true
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
