--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -25,10 +25,10 @@ springdoc.swagger-ui.enabled=true
 
 jwt.issuer=apddl5@naver.com
 jwt.secret_key=study-springboot
-#
-#spring.cloud.gcp.storage.credentials.location=classpath:steel-autonomy-399708-6a68d08e50b5.json
-#spring.cloud.gcp.storage.project-id=steel-autonomy-399708
-#spring.cloud.gcp.storage.bucket:emod_project
+
+spring.cloud.gcp.storage.credentials.location=classpath:steel-autonomy-399708-6a68d08e50b5.json
+spring.cloud.gcp.storage.project-id=steel-autonomy-399708
+spring.cloud.gcp.storage.bucket:emod_project
 
 spring.servlet.multipart.enabled=true
 
@@ -36,3 +36,5 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 server.port=8000
+
+logging.level.org.hibernate=DEBUG
