오류 해결 - 라이브러리 변화로 클래스의 사라짐 해결

--- a/my_diary_server/src/main/resources/application.properties
+++ b/my_diary_server/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:mysql://34.64.189.76:3306/emoD
+spring.datasource.url=jdbc:mysql://34.64.189.76:3306/EmoD
 spring.datasource.username=root
 spring.datasource.password=4564
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
 
 spring.security.oauth2.client.registration.google.client-id=null
 spring.security.oauth2.client.registration.google.client-secret=null
@@ -35,6 +36,4 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-server.port=8000
-
-logging.level.org.hibernate=DEBUG
+server.port=8080
