--- a/my_diary_server/build.gradle
+++ b/my_diary_server/build.gradle
@@ -41,7 +41,6 @@ dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
-
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
@@ -53,7 +52,10 @@ dependencies {
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1' // 자바 JWT 라이브러리
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
-0
+
+	implementation 'com.fasterxml:classmate:1.5.1' // com.fasterxml.classmate.TypeResolver 클래스의 문제로 해당 클래스 추가
+
+	0
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
 	implementation 'mysql:mysql-connector-java:8.0.28'
