--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,12 @@ spring.security.oauth2.client.registration.google.scope=email, profile
 
 kakao.key = d0ac00c3ae0050b7c50e4f5b8e222e7f
 
+#GPT
+gpt.model=gpt-3.5-turbo
+gpt.api.key=asst_0cdgfv5WWsYDlWYHKvhFWi7o
+gpt.api.url=https://api.openai.com/v1/chat/completions
+
+
 # Springdoc OpenAPI UI ???
 springdoc.api-docs.enabled=true
 
