--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,7 +58,11 @@ jobs:
           script: |
             sudo docker login -u ${{ secrets.DOCKERHUB_ID }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
             sudo docker pull ${{ secrets.DOCKERHUB_ID }}/test-server
-            sudo docker rm -f $(docker ps -qa) 2>/dev/null || true
+            CONTAINER_ID=$(sudo docker ps -q --filter "server-my_service-1" )
+            if [ ! -z "$CONTAINER_ID" ]; then
+              sudo docker stop $CONTAINER_ID
+              sudo docker rm $CONTAINER_ID
+            fi
             cd /home/hotikyu/emoD_project/server
             sudo docker-compose up -d
             sudo docker image prune -f     
